feat: add solutions to lcof2 problems: No.005~007 (#1469)
* No.005.单词长度的最大乘积
* No.006.排序数组中两个数字之和
* No.007.数组中和为0的三个数