@@ -1,29 +1,27 @@
 class Solution {
     public List<List<Integer>> threeSum(int[] nums) {
-        int n = nums.length;
-        List<List<Integer>> ans = new ArrayList<>();
         Arrays.sort(nums);
-        for (int i = 0; i < n - 2; i++) {
+        List<List<Integer>> ans = new ArrayList<>();
+        int n = nums.length;
+        for (int i = 0; i < n - 2 && nums[i] <= 0; ++i) {
             if (i > 0 && nums[i] == nums[i - 1]) {
                 continue;
             }
-            int left = i + 1, right = n - 1;
-            while (left < right) {
-                int cur = nums[i] + nums[left] + nums[right];
-                if (cur < 0) {
-                    left++;
-                } else if (cur > 0) {
-                    right--;
+            int j = i + 1, k = n - 1;
+            while (j < k) {
+                int x = nums[i] + nums[j] + nums[k];
+                if (x < 0) {
+                    ++j;
+                } else if (x > 0) {
+                    --k;
                 } else {
-                    ans.add(Arrays.asList(nums[i], nums[left], nums[right]));
-                    while (left < right && nums[left] == nums[left + 1]) {
-                        left++;
+                    ans.add(List.of(nums[i], nums[j++], nums[k--]));
+                    while (j < k && nums[j] == nums[j - 1]) {
+                        ++j;
                     }
-                    while (left < right && nums[right] == nums[right - 1]) {
-                        right--;
+                    while (j < k && nums[k] == nums[k + 1]) {
+                        --k;
                     }
-                    left++;
-                    right--;
                 }
             }
         }
